cynic/tests/snapshots/features__query_string_with_feature_enabled.snap
---
source: cynic/tests/features.rs
expression: operation.query
---
query QueryWithFeatures {
  a_new_hope: film(id: "ZmlsbXM6MQ==") {
    title
  }
  empire_strikes_back: film(id: "ZmlsbXM6Mg==") {
    title
  }
}


